# Mosquito-predictor

./: .gitignore  README.md  combined_data.csv  combined_data_filtered.csv  cudnn_test.cpp  cudnn_test.exp  cudnn_test.lib  dataManager  dataManager.py  data_1.csv  display.py  model.py  remove_exess_data.py  update_combined_data.py
low_level/: CMakeLists.txt  README.md  training_graph.py
low_level/data/: combined_data.csv  data_1.csv  test_data.csv  training_log.csv
low_level/include/: activation_layer.h  cnn_model.h  conv_layer.h  dense_kernels.h  dense_layer.h  error_checking.h  example.h  global_average_pooling_layer.h  loss_kernels.h  memory_man.h  model.h  optimizers.h  pooling_layer.h  preprocess.h  random_dataset.h  simplified_cnn_model.h  softmax_layer.h  train_evaluate.h  weight_init.h
low_level/include/layers/: activation_layer.h  conv_layer.h  dense_layer.h  layer_norm.h
low_level/include/optimizers/: optimizers.h
low_level/include/prototypes/: mnsit_io.h
low_level/include/utils/: conv_kernels.h  cudnn_utils.h  dense_kernels.h  error_checking.h  tensor_ops.h  weight_init.h
low_level/lib/: gtest.lib  gtest_main.lib
low_level/src/: activation_layer.cpp  cnn_model.cpp  conv_layer.cpp  conv_layer.cu  cudnn_utils.cpp  dense_kernels.cu  dense_layer.cpp  example.cpp  global_average_pooling_layer.cu  loss_kernels.cu  main.cpp  memory_man.cpp  mnist.cpp  optimizers.cu  pooling_layer.cpp  preprocess.cpp  random_data.cpp  simple_model.cu  softmax_layer.cpp  train_evaluate.cpp
low_level/src/layers/: activation_layer.cpp  conv_layer.cu  dense_layer.cpp  global_average_pooling_layer.cu  layer_norm.cu  pooling_layer.cpp  softmax_layer.cpp
low_level/src/loss/: loss_kernels.cu
low_level/src/optimizers/: optimizers.cu
low_level/src/utils/: conv_kernels.cu  cudnn_utils.cpp  dense_kernels.cu  error_checking.cu  memory_man.cpp  tensor_ops.cu
low_level/test/: test_preprocess.cpp
low_level/test/gtest/libs/: gtest_main.lib
